syntax = "proto3";

option java_package = "ru.n08i40k.polytechnic.next";
option java_multiple_files = true;

message SettingsV2 {
  string user_id = 1;
  string access_token = 2;
  string group = 3;

  string version = 5;
  string suppressed_version = 6;

  string fcm_token = 7;
}